--- a/styles.css
+++ b/styles.css
@@ -142,45 +142,17 @@ header, footer, section, img {
   background-color: #f4f4f4;
 }
 
-.slider {
-  position: relative;
-  width: 100%;
-  max-width: 500px;
-  height: 400px;
-  border-radius: 10px;
-  margin: 0 auto;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-  overflow: hidden; /* Ensures content stays within bounds */
-}
-
 .founder {
- /* display: flex;*/
- /*flex-direction: column;*/
- /*align-items: center;*/
   text-align: center;
   background: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 15px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  padding: 10px;
   border: 1px solid;
-  border-radius: 10px;
- /*max-width: 300px;*/
- /*height: 100%;*/
- /*margin: 0 auto 20px;*/
-  cursor: pointer;
- /*transition: transform 0.3s, box-shadow 0.3s;*/
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  opacity: 0; /* Hide initially */
-  transform: translateX(100%); /* Start off-screen*/
-  transition: transform 1s ease, opacity 1s ease; /* Smooth transition*/ 
-}
-
-.founder.active {
-  opacity: 1; /* Show active founder */
-  transform: translateX(0); /* Center the active founder */
-}
-
-.founder.exiting {
-  transform: translateX(-100%); /* Slide off-screen to the left */
+  border-radius: 15px;
+  height: 280px;
+  background-color: #f9f9f9;
+  overflow: hidden;
+  transition: transform 0.3s, box-shadow 0.3s ease;
 }
 
 .founders h2 {
@@ -194,49 +166,31 @@ header, footer, section, img {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
-/*.founder-info {
-  margin-top: 20px;
-  text-align: center;
-  display: none;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.founder-info h3 {
-  font-size: 1.5em;
-  margin-bottom: 10px;
-}
-
-.founder-info p {
-  font-size: 1em;
-  line-heght: 1.5;
-}*/
-
 .founder img {
-  width: 100%;
-  height: auto;
-  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  border-radius: 70%;
   margin-bottom: 10px;
- /* max-width: 150px;*/
+  object-fit: cover;
 }
 
 .founder h3 {
-  font-size: 18px;
-  margin-bottom: 8px;
+  font-size: 1rem;
+  margin: 8px 0 5px;
   color: #4CAF50;
 }
 
 .founder p {
-  font-size: 14px;
+  font-size: 0.8rem;
   color: #555;
  /*margin: 0;*/
- /*line-height: 1.5;*/
+  line-height: 1.2;
+  font-size: 0.9rem;
 }
 
 .founders-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   justify-content: center;
   gap: 20px;
   flex-wrap: wrap;
