--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,25 @@ html, body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  /*line-height: 1.6;*/
   box-sizing: border-box;
-  overflow-x: hidden;
+ /*overflow-x: hidden;*/
 }
 
-header, footer, section, img {
+header, footer, section, {
     margin: 0;
     padding: 0;
     width: 100%; /* Makes them span across the page */
+}
+
+.img {
+  max-width: 100%;
+  height: auto;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .logo img {
@@ -149,9 +159,9 @@ header, footer, section, img {
   padding: 10px;
   border: 1px solid;
   border-radius: 15px;
-  height: 280px;
+  height: auto;
   background-color: #f9f9f9;
-  overflow: hidden;
+  overflow: visible;
   transition: transform 0.3s, box-shadow 0.3s ease;
 }
 
@@ -168,8 +178,11 @@ header, footer, section, img {
 
 .founder img {
   width: 100px;
-  height: 100px;
-  border-radius: 70%;
+  height: auto;
+  max-width: 100px;
+  box-sizing: border-box;
+  max-height: 100px;
+  border-radius: 50%;
   margin-bottom: 10px;
   object-fit: cover;
 }
@@ -186,6 +199,8 @@ header, footer, section, img {
  /*margin: 0;*/
   line-height: 1.2;
   font-size: 0.9rem;
+  text-align: justify;
+  white-space: normal;
 }
 
 .founders-container {
@@ -212,7 +227,7 @@ header, footer, section, img {
   }
 }
 
-.founder {
+/*.founder {
   background: #fff;
   padding: 15px;
   border-radius: 10px;
@@ -220,9 +235,9 @@ header, footer, section, img {
   flex: 0 0 300px; /* Keeps each card a fixed size */
 }
 
-.founders-container:hover {
+/*.founders-container:hover {
   animation-play-state: paused;
-}
+}*/
 
 @media (max-width: 768px) {
   .founders-container {
